--- a/pages/side-panel/package.json
+++ b/pages/side-panel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@extension/sidepanel",
-  "version": "0.3.5",
+  "version": "0.1.0",
   "description": "chrome extension - side panel",
   "private": true,
   "sideEffects": true,
@@ -19,6 +19,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@0xintuition/1ui": "^0.1.0",
     "@extension/shared": "workspace:*",
     "@extension/storage": "workspace:*"
   },
@@ -26,8 +27,8 @@
     "@extension/tailwindcss-config": "workspace:*",
     "@extension/tsconfig": "workspace:*",
     "@extension/vite-config": "workspace:*",
-    "postcss-load-config": "^6.0.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "postcss-load-config": "^6.0.1"
   },
   "postcss": {
     "plugins": {
