--- a/packages/vite-config/package.json
+++ b/packages/vite-config/package.json
@@ -14,5 +14,8 @@
     "@extension/tsconfig": "workspace:*",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "deepmerge": "^4.3.1"
+  },
+  "dependencies": {
+    "@rollup/plugin-inject": "^5.0.5"
   }
 }
