--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@0xintuition/protocol": "^0.1.3",
+    "@apollo/client": "^3.12.6",
     "@tanstack/react-query": "^5.64.0",
     "metamask-extension-provider": "^5.0.0",
     "viem": "^2.22.8"
