--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,7 +28,13 @@
     "tsc-alias": "^1.8.10"
   },
   "dependencies": {
+    "@extension/shared": "workspace:*",
+    "@extension/storage": "workspace:*",
+    "@radix-ui/react-slot": "^1.1.1",
+    "blo": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
