--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trustbar",
+  "name": "intuition",
   "version": "0.1.3",
   "description": "chrome extension - core settings",
   "type": "module",
