--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "trustbar",
+  "name": "intuition",
   "version": "0.1.3",
   "description": "Building a Safer Web, Together",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/0xIntuition/trustbar.git"
+    "url": "https://github.com/0xIntuition/chrome-extension.git"
   },
   "type": "module",
   "scripts": {
